Prevent text wrapping of tab title

--- a/src/core/nav/nav-tabs.module.scss
+++ b/src/core/nav/nav-tabs.module.scss
@@ -48,6 +48,8 @@
   background-color: var(--ax-nav-tabs-tab-bg);
   font-weight: var(--ax-nav-tabs-tab-font-weight);
   text-transform: var(--ax-nav-tabs-tab-text-transform);
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .button,
